--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -3,3 +3,15 @@ version: v1
 id:
   org: 6c5e2d3d-8848-429c-9575-351d80a89bf5
   app: 8e8ca5e0-7160-4eae-977f-c62c44886e91
+  
+scanners:
+- sast
+- dast
+- secret
+- sca
+- iac
+- container
+dast:
+url: http://a981a80667be0424092138a2de8617c6-602499893.us-east-1.elb.amazonaws.com:8081
+fortipentest_scanner: false #true|false
+full_scan: true #true|false
