--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -12,6 +12,6 @@ scanners:
 - iac
 - container
 dast:
-url: http://a981a80667be0424092138a2de8617c6-602499893.us-east-1.elb.amazonaws.com:8081
+#url: http://a981a80667be0424092138a2de8617c6-602499893.us-east-1.elb.amazonaws.com:8081
 fortipentest_scanner: false #true|false
-full_scan: true #true|false
+full_scan: false #true|false
