--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -12,6 +12,6 @@ scanners:
 - iac
 - container
 dast:
-url: http://k8s-default-dvwaalbi-e8302be57d-1155365731.us-east-1.elb.amazonaws.com:8081
+#url: http://k8s-default-dvwaalbi-e8302be57d-1155365731.us-east-1.elb.amazonaws.com:8081
 fortipentest_scanner: false #true|false
-full_scan: true #true|false
+full_scan: false #true|false
